[FIX] om_control_interno: agregar widget JS para anclar datepicker al mes del control
- Se elimina el uso de `context` dinámico en vistas XML que causaba ParseError.
- Se implementa el widget `date_anchor_control_month` para campos de tipo date,
  anclando el calendario al primer día del mes definido en el control interno.
- El widget aplica solo en registros existentes (no al crear), permitiendo que
  el campo quede vacío al inicio.
- Se añade assets.xml para inyectar el JS en Odoo 14 (web.assets_backend).
- Se incluye el campo `mes` en vistas de líneas de costos (invisible) para que
  el widget pueda calcular el mes de referencia.

--- a/views/control_interno_views.xml
+++ b/views/control_interno_views.xml
@@ -7,6 +7,7 @@
         <field name="model">costos.gastos.line</field>
         <field name="arch" type="xml">
             <tree string="Costos y Gastos" editable="bottom" default_order="fecha_comprobante asc">
+                <field name="mes" invisible="1"/>
                 <field name="factura_xml_id" string="Factura XML"  optional="show"/>
                 <field name="orden_compra_id" />
                 <field name="fecha_pago" widget="date_anchor_control_month"/>
@@ -53,6 +54,7 @@
                 
                 <sheet>
                     <group>
+                        <field name="mes" invisible="1"/>
                         <field name="factura_xml_id" string="Factura XML"/>
                         <field name="orden_compra_id"/>
                         <field name="fecha_pago" widget="date_anchor_control_month"/>
